kubernetes/api-gateway-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ghcr.io/mitchell2001b/apigateway:main
          ports:
            - containerPort: 8585
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
