kubernetes/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress-class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 80
